<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_library_books"
            android:title="@string/menu_learn" />
        <item
            android:id="@+id/nav_exercise"
            android:icon="@drawable/ic_exercise"
            android:title="@string/menu_exercise" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_leaderboard"
            android:title="@string/menu_leaderboard" />
    </group>

    <item android:title="Others">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_rules"
                android:title="@string/menu_rules" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_about"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
