<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.yuzgulen.laera.ui.home.HomeFragment"
        android:label="@string/menu_learn"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_lessonFragment"
            app:destination="@id/nav_lesson">
            <argument android:name="selectedItem" app:argType="string"/>
            <argument android:name="progress" app:argType="string"/>
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_lesson"
        android:name="com.yuzgulen.laera.ui.lesson.LessonFragment"
        android:label="@string/menu_exercise"
        tools:layout="@layout/fragment_exercise">
        <argument android:name="selectedItem"  app:argType="string"/>
        <argument android:name="progress" app:argType="string"/>

    </fragment>

    <fragment
        android:id="@+id/nav_exercise"
        android:name="com.yuzgulen.laera.ui.exercise.ExerciseFragment"
        android:label="@string/menu_exercise"
        tools:layout="@layout/fragment_exercise">
        <action
            android:id="@+id/action_nav_exercise_to_traverseBSTExercise"
            app:destination="@id/traverseBSTExercise" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.yuzgulen.laera.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.yuzgulen.laera.ui.tools.ToolsFragment"
        android:label="@string/menu_leaderboard"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.yuzgulen.laera.ui.share.ShareFragment"
        android:label="@string/menu_rules"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.yuzgulen.laera.ui.send.SendFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/traverseBSTExercise"
        android:name="com.yuzgulen.laera.ui.exercise.categories.bst.TraverseBSTExercise"
        android:label="TraverseBSTExercise">
        <action
            android:id="@+id/action_nav_traverse_to_exercise"
            app:destination="@id/nav_exercise" />
        <action
            android:id="@+id/action_nav_traverse_to_traverse"
            app:destination="@id/traverseBSTExercise"
            app:launchSingleTop="true"
            app:popUpTo="@+id/traverseBSTExercise"
            app:popUpToInclusive="true"/>
    </fragment>
</navigation>